- Reformat entire codebase - Refactor CircleChartViewModel interface for clarity - Update initial values in component input settings

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,7 +22,7 @@
 }
 
 h1 {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: #dbdbdb;
   text-align: center;
   margin-bottom: 20px;
