- Add new properties to ViewModels for enhanced functionality - Implement Type Guards to ensure model type safety - Update README with detailed information about ViewModels - Add comprehensive descriptions for methods to improve documentation

--- a/src/app/components/bar-chart/bar-chart.component.html
+++ b/src/app/components/bar-chart/bar-chart.component.html
@@ -3,7 +3,5 @@
   [colors]="chartOptions.colors"
   [chart]="chartOptions.chart"
   [xaxis]="chartOptions.xaxis"
-  [stroke]="chartOptions.stroke"
-  [title]="chartOptions.title"
->
+  [title]="chartOptions.title">
 </apx-chart>
