--- a/src/app/components/circle-chart/circle-chart.component.html
+++ b/src/app/components/circle-chart/circle-chart.component.html
@@ -4,5 +4,5 @@
   [labels]="chartOptions.labels"
   [plotOptions]="chartOptions.plotOptions"
   [colors]="chartOptions.colors"
->
+  [responsive]="chartOptions.responsive">
 </apx-chart>
