--- a/src/app/components/spline-chart/spline-chart.component.html
+++ b/src/app/components/spline-chart/spline-chart.component.html
@@ -4,6 +4,5 @@
   [chart]="chartOptions.chart"
   [xaxis]="chartOptions.xaxis"
   [stroke]="chartOptions.stroke"
-  [title]="chartOptions.title"
->
+  [title]="chartOptions.title">
 </apx-chart>
